--- a/web/src/index.html
+++ b/web/src/index.html
@@ -21,6 +21,15 @@
               </select>
             </div>
           </li>
+          <li>
+            <div class="select">
+              <select id="engine">
+                <option value="">SELECT ENGINE...</option>
+                <option value="vm" selected>VM</option>
+                <option value="interpreter">Interpreter</option>
+              </select>
+            </div>
+          </li>
         </ul>
       </div>
 
