feat: add running animation

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -48,6 +48,7 @@
       <div class="console__title">
         <div>
           <x-icon icon="comment" size="14" color="#999"></x-icon> RESULT
+          <div class="lds-ellipsis" id="loader" style="float:right"><div></div><div></div><div></div><div></div></div>
         </div>
         <div>
           <time id="last-updated"></time></div>
