--- a/web/src/index.html
+++ b/web/src/index.html
@@ -59,6 +59,8 @@
     </div>
 
     <footer class="footer">
+      <p class="footer__repo"><a href="https://github.com/caelansar/caescript"><x-icon icon="github" size="16" color="#000"></x-icon>caelansar/caescript</a></p>
+    </footer>
     </footer>
   </main>
 </body>
