feat: show bytecode in separate window

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -52,9 +52,11 @@
         </div>
         <div>
           <time id="last-updated"></time></div>
-        </div>
+      </div>
       <div class="console__body" id="output-container">
         <pre><code id="output"></code></pre>
+      </div> <div class="bytecode__body" id="bytecode-container">
+        <pre><code id="bytecode"></code></pre>
       </div>
     </div>
 
