feat(editor): support copy shared link

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -35,7 +35,7 @@
 
       <div>
         <ul>
-          <li><button class="button button--default tooltip-container" id="share"><x-icon icon="share" size="14" color="#999"></x-icon> SHARE<span class="tooltip">Shareable link now in address bar!!</span></button></li>
+          <li><button class="button button--default tooltip-container" id="share"><x-icon icon="share" size="14" color="#999"></x-icon> SHARE<span class="tooltip">Copied!</span></button></li>
         </ul>
       </div>
     </header>
